# metaclang-cmake

./: CMakeLists.txt
MetaClang/: CMakeLists.txt  MetaClang.cpp  MetaClang.h
